--- a/modulo2/estados-insta4/package.json
+++ b/modulo2/estados-insta4/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.1",
+    "react-scripts": "^3.4.1",
     "styled-components": "^5.2.3"
   },
   "scripts": {
